--- a/gistblog/templates/token-accept.html
+++ b/gistblog/templates/token-accept.html
@@ -28,6 +28,7 @@
         let gistInput = document.getElementsByClassName("form-control")[0];
         let token = gistInput.value;
         sendJSON(token);
+        window.location.reload(true)
       }
     </script>
   </head>
