--- a/gistblog/templates/token-accept.html
+++ b/gistblog/templates/token-accept.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <script>
+    <!-- <script>
       function sendJSON(token) {
         console.log(token);
         var data = {
@@ -28,16 +28,16 @@
         let gistInput = document.getElementsByClassName("form-control")[0];
         let token = gistInput.value;
         sendJSON(token);
-        window.location.reload(true)
+        window.location.href = '/me';
       }
-    </script>
+    </script> -->
   </head>
   <!-- Header -->
   <div class="container">
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand fs-3" href="#">GistBlog</a>
+          <a class="navbar-brand fs-3" href="../">GistBlog</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -56,19 +56,21 @@
 
   <!-- page content -->
   <div class="container main-content">
-    <div class="input-group rounded">
+    <form class="input-group rounded" action="/set-token" method="POST">
       <span class="input-group-text bg-warning" id="addon-wrapping">🗝</span>
       <input
         type="text"
         class="form-control"
+        name="gist_token"
         placeholder="Enter your gist token"
         aria-label="Gist token"
         aria-describedby="addon-wrapping"
       />
-      <button class="btn btn-success" type="button" onclick="saveGistToken()">
+      <button class="btn btn-success" type="submit">
+        <!-- onclick="saveGistToken()" -->
         Submit
       </button>
-    </div>
+    </form>
   </div>
 
   <!-- Footer -->
